--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,15 +2,15 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Game/Global/Tiles_bag.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://WorldMap/", "res://UI/EndTurn/", "res://UI/CharInfoLabel/", "res://Game/", "res://Game/Spawners/", "res://Game/Global/", "res://Game/Characters/", "res://Characters/Playable/Warrior/", "res://Characters/Playable/Sniper/", "res://Characters/Playable/Scientist/", "res://Characters/Playable/Marksman/", "res://Characters/Playable/Explorer/", "res://Characters/Playable/Crusader/")
+dock_filesystem_selected_paths=PackedStringArray("res://WorldMap/Tiles/Resources/Fortress_C.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://WorldMap/", "res://WorldMap/Tiles/", "res://WorldMap/Tiles/Resources/", "res://Game/", "res://Game/Spawners/", "res://Game/Global/", "res://Game/Characters/", "res://Characters/", "res://Characters/Playable/", "res://Characters/Playable/Crusader/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -24,14 +24,14 @@ dock_hsplit_3=-321
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History"
+dock_5="Node,Inspector,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://game.tscn", "res://Game/Characters/character.tscn", "res://WorldMap/tile_data.tscn")
+open_scenes=PackedStringArray("res://game.tscn", "res://Game/Characters/character.tscn", "res://WorldMap/Tiles/Tile_instance.tscn")
 current_scene="res://game.tscn"
 center_split_offset=-527
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
@@ -44,8 +44,8 @@ position=Vector2i(1, 263)
 
 [ScriptEditor]
 
-open_scripts=["res://Game/Global/board_manager.gd", "res://Game/Global/enums.gd", "res://Game/Global/Tiles_bag.gd", "res://WorldMap/tile_data.gd", "res://Game/Spawners/tile_spawner.gd"]
-selected_script="res://Game/Spawners/tile_spawner.gd"
+open_scripts=["res://_dev_notes.txt", "res://WorldMap/Tiles/Atlas_coord_mapping.txt", "res://Game/Characters/char_data.gd", "res://Game/Global/enums.gd", "res://WorldMap/Tiles/Hex_tile_data.gd", "res://Game/Global/Tiles_bag.gd", "res://WorldMap/Tiles/tile_instance.gd", "res://Game/Spawners/tile_spawner.gd"]
+selected_script="res://WorldMap/Tiles/Atlas_coord_mapping.txt"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
