--- a/.godot/editor/quick_open_dialog_cache.cfg
+++ b/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,4 +1,4 @@
 [selected_history]
 
-Texture2D=PackedStringArray("res://Assets/Space backgroundbig.png")
 PackedScene=PackedStringArray("uid://cfbqxjiipd7e3")
+Texture2D=PackedStringArray("uid://cr8ivtmsplk1t")
