--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,7 +5,15 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Game/Characters/char_data_template.gd"
+"path": "res://Game/Characters/char_data.gd"
+}, {
+"base": &"Resource",
+"class": &"HexTileData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://WorldMap/Tiles/Hex_tile_data.gd"
 }, {
 "base": &"Resource",
 "class": &"TileBagData",
